frontend: Fix dual scrollbar issue.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -349,6 +349,7 @@
   padding: 0;
   display: flex;
   width: 100%;
+  overflow-y: hidden;
 }
 
 .GoliathSplitViewArticleListContainer .MuiGrid-root {
